<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:text="@string/name_prompt"
        tools:context=".Settings" />
    <EditText
        android:id="@+id/txt_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_prompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/name_hint"
        android:ems="10"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/email_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_name"
        android:layout_marginTop="5dp"
        android:text="@string/email_prompt"
        tools:context=".Settings" />
    <EditText
        android:id="@+id/txt_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_prompt"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/email_hint"
        android:ems="10"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/thresh_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/thresh_prompt"
        tools:context=".Settings" />
    <EditText
        android:id="@+id/slct_num"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/thresh_prompt"
        android:layout_marginTop="1dp"
        android:inputType="number" />
    <TextView
        android:id="@+id/alarm_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/slct_num"
        android:layout_marginTop="5dp"
        android:text="@string/alarm_prompt"
        tools:context=".Settings" />
    <Spinner
        android:id="@+id/alarm_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/alarm_prompt"
        android:layout_marginTop="5dp" />
    <TextView
        android:id="@+id/cat_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/alarm_spinner"
        android:layout_marginTop="5dp"
        android:text="@string/cat_prompt"
        tools:context=".Settings" />
    <Spinner
        android:id="@+id/cat_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cat_prompt"
        android:layout_marginTop="5dp" />
    
        

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/viewDisclaimer"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_alignLeft="@+id/cat_prompt"
        android:layout_below="@+id/cat_spinner"
        android:layout_marginTop="25dp"
        android:text="@string/disclaim_btn" />


</RelativeLayout>
